--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
 .idea/
+/samconfig.toml
